# wireguard-mesh-coordinator

./: .gitignore  enter_network.sh  flake.nix  pyproject.toml
wireguard_mesh_coordinator/: add_to_all_peer.py  api.py  command.py  generate_new_machine_config.py  generate_next_ip.py  hello.py  main.py  utils.py
