[project]
name = "wireguard-mesh-coordinator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[project.scripts]
wireguard-mesh-coordinator = "wireguard_mesh_coordinator:main.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
